--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
     "framer-motion": "^11.18.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.473.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -36,6 +38,7 @@
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "shadcn": "^2.1.8",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
