--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.18.1",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
